editing containers almost all correctly aligned, bullet point icon change menu works

--- a/Assets/editing.css
+++ b/Assets/editing.css
@@ -107,7 +107,7 @@
   padding: 1em;
   height: fit-content;
   width: fit-content;
-  background-color: #FF5599;
+  background-color: #ffffffee;
   z-index: 1;
   border-radius: 0.5em;
   top: 0;
